Updates ruby, adds demo
