# swagger/v2/swagger.json
@@ -39,8 +39,20 @@
                           "type": "breed",
                           "attributes": {
                             "name": "Caucasian Shepherd Dog",
-                            "description": "The Caucasian Shepherd dog is a serious guardian breed and should never be taken lightly. ",
-                            "hypoallergenic": false
+                            "description": "The Caucasian Shepherd dog is a serious guardian breed and should never be taken lightly.",
+                            "hypoallergenic": false,
+                            "life": {
+                              "min": 15,
+                              "max": 20
+                            },
+                            "male_weight": {
+                              "min": 50,
+                              "max": 100
+                            },
+                            "female_weight": {
+                              "min": 50,
+                              "max": 100
+                            }
                           }
                         },
                         {
@@ -49,10 +61,28 @@
                           "attributes": {
                             "name": "Bouvier des Flandres",
                             "description": "They don't build 'em like this anymore.",
-                            "hypoallergenic": false
+                            "hypoallergenic": false,
+                            "life": {
+                              "min": 10,
+                              "max": 14
+                            },
+                            "male_weight": {
+                              "min": 30,
+                              "max": 40
+                            },
+                            "female_weight": {
+                              "min": 25,
+                              "max": 35
+                            }
                           }
                         }
                       ],
+                      "meta": {
+                        "pagination": {
+                          "current": 1,
+                          "records": 9
+                        }
+                      },
                       "links": {
                         "self": "https://dogapi.dog/api/v2/breeds",
                         "current": "https://dogapi.dog/api/v2/breeds?page[number]=1",
@@ -70,7 +100,7 @@
     },
     "/breeds/{id}": {
       "get": {
-        "summary": "get breed",
+        "summary": "get breed with non-existing id",
         "tags": [
           "Breeds"
         ],
@@ -97,8 +127,18 @@
                         "type": "breed",
                         "attributes": {
                           "name": "Caucasian Shepherd Dog",
-                          "min_life": 15,
-                          "max_life": 20,
+                          "life": {
+                            "min": 15,
+                            "max": 20
+                          },
+                          "male_weight": {
+                            "min": 50,
+                            "max": 100
+                          },
+                          "female_weight": {
+                            "min": 50,
+                            "max": 100
+                          },
                           "description": "The Caucasian Shepherd dog is a serious guardian breed and should never be taken lightly.",
                           "hypoallergenic": false
                         }
@@ -111,6 +151,9 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "not-found"
           }
         }
       }
@@ -232,7 +275,7 @@
     },
     "/groups/{id}": {
       "get": {
-        "summary": "get group",
+        "summary": "get group with non-existing id",
         "tags": [
           "Groups"
         ],
@@ -283,6 +326,9 @@
                 }
               }
             }
+          },
+          "404": {
+            "description": "not-found"
           }
         }
       }
